changed build settings

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
-  publish="/build"
-  base = "/"
+  publish="build"
+  functions = "functions"
   
 [[redirects]]
   from = "/*"
