Changed site address

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://manijhariya.github.io/lawyer-site/",
+  "homepage" : "https://manijhariya.github.io/",
   "name": "lawyer",
   "version": "0.1.0",
   "private": true,
